# cpprest-api-gateway

./: .gitmodules  CMakeLists.txt  README.md  install_cpprest_sdk.sh
config/: routes.json
python/: flask_orders_service.py  flask_products_service.py  flask_users_service.py
src/: gateway_server.cpp  gateway_server.h  main.cpp
src/cache/: cache.cpp  cache.h
src/router/: router.cpp  router.h
src/utils/: logger.cpp  logger.h
tests/: CMakeLists.txt
